<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:padding="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:background="?attr/colorPrimaryDark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4pt"
                android:text="@string/epic_phrase"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8pt"
                    android:padding="8pt"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="@string/groups"
                    android:id="@+id/drawer_group_header"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4pt"
                    android:id="@+id/group_name_recycler"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="8pt"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8pt"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:text="@string/about_program"
                    android:id="@+id/about"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8pt"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:text="@string/exit"
                    android:id="@+id/exit_app"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
