<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="contactModel"
            type="com.example.test_user_1.contactbook.ContactBookModel.ContactModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/darker_gray">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150pt"
                android:scaleType="centerCrop"
                android:id="@+id/photo_preview"
                app:backImageUri="@{contactModel.imageUri}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignBottom="@+id/photo_preview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="20pt"
                android:paddingBottom="8pt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="4pt"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:text="@{contactModel.firstName}"
                        android:id="@+id/first_name_preview"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="4pt"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:text="@{contactModel.lastName}"
                        android:id="@+id/last_name_preview"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2pt"
            android:layout_marginBottom="2pt"
            android:padding="2pt"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4pt"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/phone_number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@{contactModel.phoneNumber}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2pt"
            android:orientation="horizontal"
            android:padding="2pt"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4pt"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@{contactModel.address}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2pt"
            android:padding="2pt"
            android:orientation="vertical"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4pt"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/groups"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8pt"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2pt"
                android:id="@+id/contact_preview_group_recycler">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</layout>